force-app/main/default/objects/Participation__c/Participation__c.object-meta.xml
<CustomObject>
    <description>Teams by tournement</description>
    <label>Participation</label>
    <nameField>
        <displayFormat>Participation-{0}</displayFormat>
        <label>Participation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Participations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>