force-app/main/default/objects/Participation__c/fields/Is_Eliminated__c.field-meta.xml
<CustomField>
    <fullName>Is_Eliminated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Eliminated</label>
    <type>Checkbox</type>
</CustomField>