force-app/main/default/objects/Participation__c/fields/Losses__c.field-meta.xml
<CustomField>
    <fullName>Losses__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Losses</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>