force-app/main/default/objects/Participation__c/fields/Matches_Played__c.field-meta.xml
<CustomField>
    <fullName>Matches_Played__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Matches Played</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>